Fixed layout problems

--- a/Pitchball/Pitchball/wwwroot/css/Login.css
+++ b/Pitchball/Pitchball/wwwroot/css/Login.css
@@ -1,5 +1,3 @@
-﻿
-.card{
+﻿.card{
 	margin:6%;
-	background-color:white;
 }
