--- a/Pitchball/Pitchball/wwwroot/css/Register.css
+++ b/Pitchball/Pitchball/wwwroot/css/Register.css
@@ -1,4 +1,3 @@
 ﻿.card {
 	margin: 3%;
-	background-color: white;
 }
