--- a/Pitchball/Pitchball/wwwroot/css/_layout.css
+++ b/Pitchball/Pitchball/wwwroot/css/_layout.css
@@ -22,7 +22,6 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     min-height: 100%;
-    margin-top: 5%;
     padding-top: 5%;
 }
 .cardio {
@@ -39,4 +38,13 @@ body {
 	margin: 3%;
     background:rgba(252, 252, 252, 0.65);
     border:none;
+}
+
+.card-body {
+    background: rgba(252, 252, 252, 0.65);
+    border: none;
+}
+
+.form-control {
+    background: rgba(246, 243, 243, 0.79);
 }
